front end design

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,27 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Raleway:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&family=Josefin+Sans&family=Raleway:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text:wght@500&family=Inconsolata:wght@600&family=Josefin+Sans&family=Mukta:wght@500&family=Raleway:wght@400;500;600&family=Yanone+Kaffeesatz:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
